--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,11 +1,12 @@
-<h1> Hello</h1>
-<p>
-  The time is now:
-  <%= Time.now %>
-</p>
+<h1> Juan's view. </h1>
+<p> Part of assignment for ruby on rails class by Richard Schneeman </p>
 
-<p>
-  My Name is:
-  <%= @name %>
-</p>
-
+<p> Iterating w/ ruby </p>
+<p> Coding Projects:
+    <ul>
+      <% ['this', 'modular arithmetic library', 'exam timer'].each do |proj| %>
+        <li> <%= proj %></li>
+      <% end %>
+    </ul>
+<p> Time is: </p>
+<%= Time.now %>
